<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- artboard_11 strings -->

	<string name="app_name">Artboard 11</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="ish_madushka_gmail_com_string">ish.madushka@gmail.com</string>
	<string name="______________________________string">                  </string>
	<string name="enter_email___password_to_continue_string">Enter email &amp; password to continue</string>
	<string name="sign_in_to_grocery_app_string">Sign in to Grocery App</string>
	<string name="sign_in_string">SIGN IN</string>
	<string name="sign_in_ek1_string">Sign in</string>
	<string name="sign_up_string">Sign up</string>
	<string name="_12_30_string">12:30</string>
	<string name="forgot_password__string">Forgot password?</string>
	<string name="dismiss_string">DISMISS</string>
	<string name="wrong_email_or_password__string">Wrong Email or Password!</string>
</resources>