<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		artboard_11
	 *	@date 		0
	 *	@title 		Artboard 11
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/artboard_11" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="760dp" >

			<View android:id="@+id/_bg__artboard_11"
				android:background="@drawable/_bg__artboard_11_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="760dp" />

			<View android:id="@+id/rectangle_100"
				android:background="@drawable/rectangle_100_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="760dp" />

			<View android:id="@+id/rectangle_101"
				android:background="@drawable/rectangle_101_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="356dp" />

			<View android:id="@+id/input"
				android:background="@drawable/input_shape"
				 android:layout_marginLeft="16.000122070312dp"
				 android:layout_marginStart="16.000122070312dp"
				android:layout_marginTop="207dp"
				android:layout_width="327.99987792969dp"
				android:layout_height="1dp" />

			<TextView android:id="@+id/ish_madushka_gmail_com"
				android:fontFamily="Roboto-Medium"
				android:textSize="16sp"
				android:textColor="@color/ish_madushka_gmail_com_color"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="179dp"
				android:layout_width="192dp"
				android:layout_height="24dp"
				android:text="@string/ish_madushka_gmail_com_string"
				 />

			<View android:id="@+id/input_ek1"
				android:background="@drawable/input_ek1_shape"
				 android:layout_marginLeft="16.000122070312dp"
				 android:layout_marginStart="16.000122070312dp"
				android:layout_marginTop="271dp"
				android:layout_width="327.99987792969dp"
				android:layout_height="1dp" />

			<TextView android:id="@+id/_____________________________"
				android:fontFamily="Roboto-Medium"
				android:textSize="18sp"
				android:textColor="@color/ish_madushka_gmail_com_color"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="241dp"
				android:layout_width="172dp"
				android:layout_height="28dp"
				android:text="@string/______________________________string"
				 />

			<TextView android:id="@+id/enter_email___password_to_continue"
				android:fontFamily="Roboto-Regular"
				android:textSize="16sp"
				android:textColor="@color/enter_email___password_to_continue_color"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="123.00024414062dp"
				android:layout_width="261dp"
				android:layout_height="22dp"
				android:text="@string/enter_email___password_to_continue_string"
				 />

			<TextView android:id="@+id/sign_in_to_grocery_app"
				android:fontFamily="Roboto-Medium"
				android:textSize="24sp"
				android:textColor="@color/ish_madushka_gmail_com_color"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="86.000244140625dp"
				android:layout_width="245dp"
				android:layout_height="37dp"
				android:text="@string/sign_in_to_grocery_app_string"
				 />

			<View android:id="@+id/bg"
				android:background="@drawable/bg_shape"
				 android:layout_marginLeft="250dp"
				 android:layout_marginStart="250dp"
				android:layout_marginTop="296dp"
				android:layout_width="94dp"
				android:layout_height="36dp" />

			<TextView android:id="@+id/sign_in"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="14sp"
				android:textColor="@color/sign_in_color"
				android:layout_marginLeft="268.75512695312dp"
				android:layout_marginTop="304dp"
				android:layout_width="57dp"
				android:layout_height="22dp"
				android:text="@string/sign_in_string"
				 />

			<TextView android:id="@+id/sign_in_ek1"
				android:fontFamily="Roboto-Bold"
				android:textSize="17sp"
				android:textColor="@color/sign_in_ek1_color"
				android:layout_marginLeft="16dp"
				android:layout_marginTop="41dp"
				android:layout_width="57dp"
				android:layout_height="25dp"
				android:text="@string/sign_in_ek1_string"
				 />

			<TextView android:id="@+id/sign_up"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_vertical|end"
				android:gravity="end"
				android:textSize="17sp"
				android:textColor="@color/enter_email___password_to_continue_color"
				android:layout_marginLeft="283dp"
				android:layout_marginTop="41dp"
				android:layout_width="63dp"
				android:layout_height="25dp"
				android:text="@string/sign_up_string"
				 />

			<View android:id="@+id/bg_ek1"
				android:background="@drawable/bg_ek1_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="24dp" />

			<TextView android:id="@+id/_12_30"
				android:fontFamily="Roboto-Regular"
				android:textSize="13sp"
				android:textColor="@color/enter_email___password_to_continue_color"
				android:layout_marginLeft="319dp"
				android:layout_marginTop="5dp"
				android:layout_width="37dp"
				android:layout_height="18dp"
				android:text="@string/_12_30_string"
				 />


			<RelativeLayout android:id="@+id/battery"
				android:layout_marginTop="5dp"
				android:layout_marginStart="302dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/path_198"
					android:src="@drawable/path_198"
					android:contentDescription="path_198"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="8dp"
					android:layout_height="7dp" />

				<View android:id="@+id/rectangle_102"
					android:background="@drawable/rectangle_102_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="7dp"
					android:layout_width="8dp"
					android:layout_height="6dp" />

			</RelativeLayout>

			<ImageView android:id="@+id/path_199"
				android:src="@drawable/path_199"
				android:contentDescription="path_199"
				 android:layout_marginLeft="276dp"
				 android:layout_marginStart="276dp"
				android:layout_marginTop="6dp"
				android:layout_width="12.062866210938dp"
				android:layout_height="12dp" />


			<RelativeLayout android:id="@+id/group_135"
				android:layout_marginTop="5dp"
				android:layout_marginStart="249dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/group_134"
					android:src="@drawable/group_134"
					android:contentDescription="group_134"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="18dp"
					android:layout_height="14dp" />

			</RelativeLayout>

			<ImageView android:id="@+id/path_201"
				android:src="@drawable/path_201"
				android:contentDescription="path_201"
				 android:layout_marginLeft="276dp"
				 android:layout_marginStart="276dp"
				android:layout_marginTop="12.03125dp"
				android:layout_width="6dp"
				android:layout_height="5.96875dp" />

			<TextView android:id="@+id/forgot_password_"
				android:fontFamily="Roboto-Medium"
				android:textSize="16sp"
				android:textColor="@color/enter_email___password_to_continue_color"
				android:layout_marginLeft="15.999755859375dp"
				android:layout_marginTop="302dp"
				android:layout_width="131dp"
				android:layout_height="24dp"
				android:text="@string/forgot_password__string"
				 />

			<View android:id="@+id/bg_ek2"
				android:background="@drawable/bg_ek2_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="712dp"
				android:layout_width="360dp"
				android:layout_height="48dp" />

			<ImageView android:id="@+id/recent"
				android:src="@drawable/recent"
				android:contentDescription="recent"
				 android:layout_marginLeft="272dp"
				 android:layout_marginStart="272dp"
				android:layout_marginTop="727dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/home"
				android:src="@drawable/home"
				android:contentDescription="home"
				 android:layout_marginLeft="171dp"
				 android:layout_marginStart="171dp"
				android:layout_marginTop="727dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/hide"
				android:src="@drawable/hide"
				android:contentDescription="hide"
				 android:layout_marginLeft="70.013305664062dp"
				 android:layout_marginStart="70.013305664062dp"
				android:layout_marginTop="727dp"
				android:layout_width="18.979736328125dp"
				android:layout_height="16.994018554688dp" />

			<ImageView android:id="@+id/bg_ek3"
				android:src="@drawable/bg_ek3"
				android:contentDescription="bg_ek3"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="656dp"
				android:layout_width="360dp"
				android:layout_height="56dp" />

			<ImageView android:id="@+id/light"
				android:src="@drawable/light"
				android:contentDescription="light"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="656dp"
				android:layout_width="360dp"
				android:layout_height="1dp" />

			<TextView android:id="@+id/dismiss"
				android:fontFamily="Roboto-Bold"
				android:layout_gravity="center_vertical|end"
				android:gravity="end"
				android:textSize="14sp"
				android:textColor="@color/dismiss_color"
				android:layout_marginLeft="287dp"
				android:layout_marginTop="673.99951171875dp"
				android:layout_width="60dp"
				android:layout_height="22dp"
				android:text="@string/dismiss_string"
				 />

			<TextView android:id="@+id/wrong_email_or_password_"
				android:fontFamily="Roboto-Medium"
				android:textSize="16sp"
				android:textColor="@color/sign_in_color"
				android:layout_marginLeft="15.999755859375dp"
				android:layout_marginTop="671.99951171875dp"
				android:layout_width="190dp"
				android:layout_height="24dp"
				android:text="@string/wrong_email_or_password__string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>